--- a/example/app.json
+++ b/example/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-app-integrity-example",
-    "slug": "expo-app-integrity-example",
+    "name": "integrity-example",
+    "slug": "integrity-example",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,6 +27,25 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
-  }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "41024734-d880-4119-af45-185056c90dc8"
+      }
+    },
+    "plugins": [
+      "expo-build-properties"
+    ]
+  },
+  "plugins": [
+    [
+      "expo-build-properties",
+      {
+        "ios": {
+          "deploymentTarget": "14.0"
+        }
+      }
+    ],
+    "expo-secure-store"
+  ]
 }
