--- a/example/package.json
+++ b/example/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "expo-app-integrity-example",
+  "name": "integrity-example",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "REACT_NATIVE_PACKAGER_HOSTNAME=192.168.0.24 npx expo start --dev-client --tunnel --clear",
+    "android": "expo run:android --tunnel",
+    "ios": "expo run:ios --tunnel",
+    "web": "expo start --web",
+    "dev:build": "REACT_NATIVE_PACKAGER_HOSTNAME=192.168.0.24 npx expo start --dev-client --tunnel"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "expo": "~48.0.9",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.71.4",
+    "expo-dev-client": "~2.1.6",
+    "expo-build-properties": "~0.5.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-device": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react": "~18.0.14",
+    "typescript": "^4.9.4"
   },
   "private": true,
   "expo": {
