--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
   "author": "Elliot Jackson <13633636+elliotmjackson@users.noreply.github.com> (https://github.com/elliotmjackson)",
   "license": "MIT",
   "homepage": "https://github.com/elliotmjackson/expo-app-integrity#readme",
-  "dependencies": {},
+  "dependencies": {
+    "expo": "^50.0.14",
+    "expo-device": "^5.9.3",
+    "expo-secure-store": "^12.8.1",
+    "react-native": "^0.73.6"
+  },
   "devDependencies": {
     "@types/react": "^18.0.25",
     "expo-module-scripts": "^3.4.1",
