--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Cross-platform app attestation module for Expo",
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "homepage": "https://github.com/elliotmjackson/expo-app-integrity",
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
