--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,8 +1,5 @@
 {
-  "platforms": ["ios", "android"],
-  "ios": {
-    "modules": ["IntegrityModule"]
-  },
+  "platforms": ["android"],
   "android": {
     "modules": ["expo.modules.integrity.IntegrityModule"]
   }
