Revert "drop support for ios"
This reverts commit 53a19e63f891a48c186453791bc6f2175a0130e6.

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,5 +1,8 @@
 {
-  "platforms": ["android"],
+  "platforms": ["ios", "android"],
+  "ios": {
+    "modules": ["IntegrityModule"]
+  },
   "android": {
     "modules": ["expo.modules.integrity.IntegrityModule"]
   }
